feat: open api interaction
